# RayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  box.h  bvh_node.h  camera.h  flip_normals.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  perlin.h  ray.h  rect.h  rotate.h  scene_factory.h  sphere.h  texture.h  timer.h  translate.h  util.h  vec3.h
